fix intro copy on mobile

--- a/src/containers/HomeHero/HomeHero.module.scss
+++ b/src/containers/HomeHero/HomeHero.module.scss
@@ -79,7 +79,7 @@
     @include md-max {
       font-size: 18px;
       margin-bottom: 30px;
-      padding-left: 20px;
+      padding-left: 0;
       text-align: center;
       width: 100%;
     }
